Switch back to JVM 11 target with exceptions for some modules.
Signed-off-by: Alexander Lowey-Weber <alexander.weber@here.com>